--- a/muleapp/pom.xml
+++ b/muleapp/pom.xml
@@ -43,6 +43,26 @@
 					    </cloudHubDeployment>
 				</configuration>
 			</plugin>
+			<plugin>
+						<groupId>org.sonatype.plugin</groupId>
+							<artifactId>nexus-staging-maven-plugin</artifactId>
+							<version>1.66</version>
+							<extensions>true</extensions>
+							<configuration>
+								<serverId>nexus</serverId>
+								<nexusurl>http://localhost:9081/nexus/</nexusurl>
+								<skipStaging>true</skipStaging>
+							</configuration>
+							<executions>
+								<execution>
+								<id>default-deploy</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+								</execution>
+							</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -92,5 +112,13 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	
+	<distributionManagement>
+			<snapshotRepository>
+				<id>mulerelease</id>
+				<name>mulerelease</name>
+				<url>http://localhost:8081/repository/mulerepo1/</url>
+			</snapshotRepository>
+	</distributionManagement>
 
 </project>
